<resources>
    <string name="app_name">Covider</string>
    <string name="report">Report</string>
    <string name="check_in">Check In</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="map">Map</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="entry_requirement">Entry Requirements</string>
    <string name="check_in_questionnaire_title">Check In Questionnaire</string>
    <string name="questionnaire_mask">Do most people wear mask?</string>
    <string name="questionnaire_mask_id">questionnaire_mask</string>
    <string name="questionnaire_sanitizer">Is there enough sanitizer?</string>
    <string name="questionnaire_sanitizer_id">questionnaire_sanitizer</string>
    <string name="questionnaire_distance">Do people keep social distance?</string>
    <string name="questionnaire_distance_id">questionnaire_distance</string>
    <string name="questionnaire_symptoms">Are there any people with symptoms?</string>
    <string name="questionnaire_symptoms_id">questionnaire_symptoms</string>
    <string name="last_3_days">In Last 3 Days</string>
    <string name="go_back">Go Back</string>
    <string name="frequently_visited">Frequently Visited</string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="all_buildings">All Buildings</string>
    <string name="total_visitors" formatted="false">Total Visitors: %d</string>
    <string name="low_risk_visitors" formatted="false">Low Risk Visitors: %d</string>
    <string name="high_risk_visitors" formatted="false">High Risk Visitors: %d</string>
    <string name="positive_visitors" formatted="false">Positive Visitors: %d</string>
    <string name="esh">esh</string>
    <string name="esh_full">Engemann Student Health Center</string>
    <string name="esh_display">Engemann Student Health Center (ESH)</string>
    <string name="mcc">mcc</string>
    <string name="mcc_full">McClintock Building</string>
    <string name="mcc_display">McClintock Building (MCC)</string>
    <string name="flt">flt</string>
    <string name="flt_full">Fluor Tower</string>
    <string name="flt_display">Fluor Tower (FLT)</string>
    <string name="koh">koh</string>
    <string name="koh_full">Frank L. King Olympic Hall of Champions</string>
    <string name="koh_display">Frank L. King Olympic Hall of Champions (KOH)</string>
    <string name="wto">wto</string>
    <string name="wto_full">Webb Tower</string>
    <string name="wto_display">Webb Tower (WTO)</string>
    <string name="lrc">lrc</string>
    <string name="lrc_full">Lyon Center</string>
    <string name="lrc_display">Lyon Center (LRC)</string>
    <string name="uac">uac</string>
    <string name="uac_full">Uytengsu Aquatics Center</string>
    <string name="uac_display">Uytengsu Aquatics Center (UAC)</string>
    <string name="jef">jef</string>
    <string name="jef_full">Jefferson Building</string>
    <string name="jef_display">Jefferson Building (JEF)</string>
    <string name="den">den</string>
    <string name="den_full">Norris Dental Science Center</string>
    <string name="den_display">Norris Dental Science Center (DEN)</string>
    <string name="kdc">kdc</string>
    <string name="kdc_full">Glorya Kaufman International Dance Center</string>
    <string name="kdc_display">Glorya Kaufman International Dance Center (KDC)</string>
    <string name="urc">urc</string>
    <string name="urc_full">University Religious Center</string>
    <string name="urc_display">University Religious Center (URC)</string>
    <string name="clh">clh</string>
    <string name="clh_full">College House</string>
    <string name="clh_display">College House (CLH)</string>
    <string name="uuc">uuc</string>
    <string name="uuc_full">United University Church</string>
    <string name="uuc_display">United University Church (UUC)</string>
    <string name="ahn">ahn</string>
    <string name="ahn_full">Dosan Ahn Chang Ho Family House</string>
    <string name="ahn_display">Dosan Ahn Chang Ho Family House (AHN)</string>
    <string name="jep">jep</string>
    <string name="jep_full">Joint Educational Project House</string>
    <string name="jep_display">Joint Educational Project House (JEP)</string>
    <string name="ksh">ksh</string>
    <string name="ksh_full">Amy King Dundon-Berchtold University Club of USC</string>
    <string name="ksh_display">Amy King Dundon-Berchtold University Club of USC (KSH)</string>
    <string name="swc">swc</string>
    <string name="swc_full">Social Work Center</string>
    <string name="swc_display">Social Work Center (SWC)</string>
    <string name="mrf">mrf</string>
    <string name="mrf_full">Montgomery Ross Fisher Building</string>
    <string name="mrf_display">Montgomery Ross Fisher Building (MRF)</string>
    <string name="ois">ois</string>
    <string name="ois_full">Office of International Services</string>
    <string name="ois_display">Office of International Services</string>
    <string name="dcc">dcc</string>
    <string name="dcc_full">Davidson Continuing Education Conference Center</string>
    <string name="dcc_display">Davidson Continuing Education Conference Center (DCC)</string>
    <string name="mtx">mtx</string>
    <string name="mtx_full">Marks Tennis Stadium</string>
    <string name="mtx_display">Marks Tennis Stadium (MTX)</string>
    <string name="drc">drc</string>
    <string name="drc_full">Drama Center</string>
    <string name="drc_display">Drama Center (DRC)</string>
    <string name="sci">sci</string>
    <string name="sci_full">School of Cinematic Arts</string>
    <string name="sci_display">School of Cinematic Arts (SCI)</string>
    <string name="scb">scb</string>
    <string name="scb_full">School of Cinematic Arts</string>
    <string name="scb_display">School of Cinematic Arts (SCB)</string>
    <string name="scc">scc</string>
    <string name="scc_full">School of Cinematic Arts</string>
    <string name="scc_id">School of Cinematic Arts</string>
    <string name="scc_display">School of Cinematic Arts (SCC)</string>
    <string name="sca">sca</string>
    <string name="sca_full">School of Cinematic Arts</string>
    <string name="sca_display">School of Cinematic Arts (SCA)</string>
    <string name="scx">scx</string>
    <string name="scx_full">School of Cinematic Arts</string>
    <string name="scx_display">School of Cinematic Arts (SCX)</string>
    <string name="sce">sce</string>
    <string name="sce_full">School of Cinematic Arts</string>
    <string name="sce_display">School of Cinematic Arts (SCE)</string>
    <string name="aes">aes</string>
    <string name="aes_full">Alice and Eleonore Schoenfeld Symphonic Hall</string>
    <string name="aes_display">Alice and Eleonore Schoenfeld Symphonic Hall (AES)</string>
    <string name="ctv">ctv</string>
    <string name="ctv_full">Carson Television Center</string>
    <string name="ctv_display">Carson Television Center (CTV)</string>
    <string name="jws">jws</string>
    <string name="jws_full">John Williams Scoring Stage</string>
    <string name="jws_display">John Williams Scoring Stage (JWS)</string>
    <string name="tmc">tmc</string>
    <string name="tmc_full">The Music Complex</string>
    <string name="tmc_display">The Music Complex (TMC)</string>
    <string name="mus">mus</string>
    <string name="mus_full">Albert S. Raubenheimer Music Faculty Memorial Building</string>
    <string name="mus_display">Albert S. Raubenheimer Music Faculty Memorial Building (MUS)</string>
    <string name="rhm">rhm</string>
    <string name="rhm_full">Ramo Hall of Music</string>
    <string name="rhm_display">Ramo Hall of Music (RHM)</string>
    <string name="bmh">bmh</string>
    <string name="bmh_full">Booth Ferris Rehearsal Hall</string>
    <string name="bmh_display">Booth Ferris Rehearsal Hall (BMH)</string>
    <string name="thh">thh</string>
    <string name="thh_full">Taper Hall of Humanities</string>
    <string name="thh_display">Taper Hall of Humanities (THH)</string>
    <string name="cas">cas</string>
    <string name="cas_full">College Academic Services Building</string>
    <string name="cas_display">College Academic Services Building (CAS)</string>
    <string name="wph">wph</string>
    <string name="wph_full">Waite Phillips Hall</string>
    <string name="wph_display">Waite Phillips Hall (WPH)</string>
    <string name="sos">sos</string>
    <string name="sos_full">Social Sciences Building</string>
    <string name="sos_display">Social Sciences Building (SOS)</string>
    <string name="lvl">lvl</string>
    <string name="lvl_full">Leavey Library</string>
    <string name="lvl_display">Leavey Library (LVL)</string>
    <string name="jmc">jmc</string>
    <string name="jmc_full">John McKay Center</string>
    <string name="jmc_display">John McKay Center (JMC)</string>
    <string name="gap">gap</string>
    <string name="gap_full">Galen Athletic Pavilion</string>
    <string name="gap_display">Galen Athletic Pavilion (GAP)</string>
    <string name="her">her</string>
    <string name="her_full">Heritage Hall</string>
    <string name="her_display">Heritage Hall (HER)</string>
    <string name="lts">lts</string>
    <string name="lts_full">Katherine B. Loker Track Stadium</string>
    <string name="lts_display">Katherine B. Loker Track Stadium (LTS)</string>
    <string name="ctf">ctf</string>
    <string name="ctf_full">Colich Track &amp; Field Center</string>
    <string name="ctf_display">Colich Track &amp; Field Center (CTF)</string>
    <string name="mar">mar</string>
    <string name="mar_full">McAlister Academic Resource Center</string>
    <string name="mar_display">McAlister Academic Resource Center (MAR)</string>
    <string name="drb">drb</string>
    <string name="drb_full">Denney Research Center</string>
    <string name="drb_display">Denney Research Center (DRB)</string>
    <string name="kap">kap</string>
    <string name="kap_full">Kaprielian Hall</string>
    <string name="kap_display">Kaprielian Hall (KAP)</string>
    <string name="rri">rri</string>
    <string name="rri_full">Ray R. Irani Hall</string>
    <string name="rri_display">Ray R. Irani Hall (RRI)</string>
    <string name="mcb">mcb</string>
    <string name="mcb_full">Michelson Center For Convergent Bioscience</string>
    <string name="mcb_display">Michelson Center For Convergent Bioscience (MCB)</string>
    <string name="sgm">sgm</string>
    <string name="sgm_full">Seeley G. Mudd Hall</string>
    <string name="sgm_display">Seeley G. Mudd Hall (SGM)</string>
    <string name="gfs">gfs</string>
    <string name="gfs_full">Grace Ford Salvatori Hall of Letters, Arts and Sciences</string>
    <string name="gfs_display">Grace Ford Salvatori Hall of Letters, Arts and Sciences (GFS)</string>
    <string name="hnb">hnb</string>
    <string name="hnb_full">Hedco Neurosciences Building</string>
    <string name="hnb_display">Hedco Neurosciences Building (HNB)</string>
    <string name="dps">dps</string>
    <string name="dps_full">Department of Public Safety</string>
    <string name="dps_display">Department of Public Safety</string>
    <string name="scd">scd</string>
    <string name="sal">sal</string>
    <string name="sto_display">Stonier Hall (STO)</string>
    <string name="in_person"><b>In Person</b></string>
    <string name="course_risk_report">Course Risk Report</string>
    <string name="positive_students">Positive Students: %d</string>
    <string name="high_risk_students">High Risk Students: %d</string>
    <string name="low_risk_students">Low Risk Students: %d</string>
    <string name="change_offline">Change to In-Person</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
</resources>