<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:background="@color/pop_up_bg"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginVertical="30dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/popup_course_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black_light"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@color/online_red"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:text="@string/in_person" />
    </LinearLayout>
    <TextView
        android:id="@+id/popup_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_serif_bold"
        android:textSize="29sp"
        android:text="@string/sto_display"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:background="@color/pop_up_bg"
        android:layout_weight="3"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_bold"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:text="@string/course_risk_report"/>
        <TextView
            android:id="@+id/pop_up_positive_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="19sp"
            android:text="@string/positive_students"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_high_risk_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="19sp"
            android:text="@string/high_risk_students"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_low_risk_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="19sp"
            android:text="@string/low_risk_students"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_building_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_bold"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:text="@string/sal"/>
        <TextView
            android:id="@+id/pop_up_total_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_low_risk_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_high_risk_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_positive_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:background="@color/pop_up_bg"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="vertical">
        <Button
            android:id="@+id/change_course_status_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/in_person_green"
            android:drawableLeft="@drawable/ic_user_group_solid"
            android:textColor="@color/grey_light_text"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            android:text="@string/change_offline"/>
        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_reply_solid"
            android:textColor="@color/grey_light_text"
            android:paddingVertical="8dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/go_back"/>
    </LinearLayout>
</LinearLayout>