<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/cardinal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >
            <ImageButton
                android:id="@+id/map"
                android:contentDescription="@string/map"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/cardinal_selected"
                android:backgroundTint="@color/cardinal_selected"
                android:src="@android:drawable/ic_dialog_map"
                android:layout_weight="1"
                app:tint="@color/gold" />

            <ImageButton
                android:id="@+id/report"
                android:contentDescription="@string/report"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/cardinal"
                android:backgroundTint="@color/cardinal"
                android:src="@drawable/ic_report_icon_fill"
                android:layout_weight="1"
                app:tint="@color/gold" />

            <ImageButton
                android:id="@+id/profile"
                android:contentDescription="@string/profile"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/cardinal"
                android:backgroundTint="@color/cardinal"
                android:src="@drawable/ic_person_fill"
                android:layout_weight="1"
                app:tint="@color/gold" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <Switch
            android:id="@+id/toggle_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/map_view"
            android:theme="@style/Theme.ToggleTheme"
            app:track="@drawable/switch_track" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>